Change colour style of answer-url content to ensure visibility in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,7 +342,7 @@ footer a:hover {
 }
 
 #answer-url:hover {
-    color: #79804F;
+    background-color: #fff;
 }
 
 #bottom-heading-results p {
